# MIT-Proto

./: README.md  RELEASE-CHECKLIST  TODO  prepare-release.sh
105/: Makefile.am  NEWS  README.developer  configure.ac  p2b
105/config/: ode.m4
105/demos/: README.txt  flock-demo.proto  flock.proto  ring.proto  track-demo.proto
105/lib/: Makefile.am  grad-value.proto  gradient.proto
105/lib/core/: Makefile.am  and.proto  not.proto  or.proto
105/man/src/: credits.tex
105/plugins/odedynamics/: configure.ac  odedynamics.cpp  odedynamics.h
105/src/: KNOWN_BUGS.txt  README.prototest  compiler-app.cpp  sim-app.cpp
105/src/compiler/: compiler-utils.cpp  compiler-utils.h  compiler.cpp  enumlexer.cpp  lexer.cpp  lisp.cpp  one_enum.flex  proto_syntax.flex  reader.h  sexpr.h
105/src/examples/: whiteback.pal
105/src/kernel/: Makefile.am  proto.c  proto.h  proto_vm.h
105/src/motelink/: motelink.cpp  motelink.h
105/src/shared/: Makefile.am  Trackball.h  drawing_primitives.h  palette.cpp  palette.h  utils.cpp  utils.h  visualizer.cpp
105/src/sim/: Makefile.am  basic-hardware.cpp  basic-hardware.h  customizations.cpp  customizations.h  multiradio.cpp  multiradio.h  platform_ops.proto  radio.cpp  radio.h  scheduler.cpp  sim-hardware.cpp  sim-hardware.h  simpledynamics.h  spatialcomputer.cpp  spatialcomputer.h  unitdiscradio.cpp  unitdiscradio.h  wormhole-radio.cpp
105/src/sim/plugins/: Makefile.am  stop-when.cpp  stop-when.h
105/src/tests/: Makefile.am  (+8 more)
build_files/: Linux.properties  Mac OS X.properties  Windows XP.properties  build-new.xml  build.xml  cygwin.properties  cygwinbuild.xml  make.bat
odedynamics/: Makefile.am  README  config.h  configure.ac
odedynamics/src/: BodyHandler.cpp  BodyHandler.h  BodySchema.xsd  odebody.cpp  odebody.h  odebodyfactory.cpp  odebodyfactory.h  odecube.cpp  odedynamics.cpp  odedynamics.h  odeshapes.h  test.xml  xerces_bodies.cpp  xerces_bodies.h
plugin_example/: ExampleLayer.cpp  ExampleLayer.h  ExamplePlugin.cpp  ExamplePlugin.h  Makefile.am  README  configure.ac
plugins/: configure.ac
plugins/config/: dirs.m4
plugins/src/: Makefile.am  SConstruct
proto/: AUTHORS  Makefile.am  NEWS  README  README.developer  build.xml  configure.ac  cygwin.properties  cygwinbuild.xml  make.bat  p2b  p2b.in  proto  proto.in  testfile
proto/config/: dirs.m4  neocompiler.m4
proto/demos/: local-average.proto  nav-grad.proto  track-demo.proto
proto/doc/: Doxyfile.in
proto/hooks/: post-commit
proto/lib/: Makefile.am  bootstrap.proto  core.ops  core.proto  grad-value.proto  gradient.proto
proto/lib/core/: Makefile.am  normalize.proto
proto/lib/paleo/: Makefile.am
proto/man/: proto-mode.el  proto.vim
proto/notes/: delay-lag.txt  plugin.txt
proto/src/: KNOWN_BUGS.txt  Makefile.am  compiler-app.cpp  createRegistry.cpp  proto_version.h  sim-app.cpp  update_vm.sh
proto/src/compiler/: Makefile.am  analyzer.cpp  analyzer.h  compiler-utils.cpp  compiler-utils.h  compiler.cpp  compiler.h  emitter.cpp  interpreter.cpp  ir.cpp  ir.h  lexer.cpp  lisp.cpp  nc-checklist.txt  neocompiler.cpp  neocompiler.h  nicenames.cpp  nicenames.h  paleocompiler.cpp  paleocompiler.h  proto_syntax.flex  proto_types.h  prototypes.cpp  reader.cpp  reader.h  sexpr.h
proto/src/compiler/unittests/: Makefile.am  TypeCheckingTestCase.cpp  TypeCheckingTestCase.h
proto/src/core_plugins/: DistributionsPlugin.cpp  DistributionsPlugin.h  Makefile.am  Mica2MotePlugin.cpp  Mica2MotePlugin.h  RadioModelsPlugin.cpp  RadioModelsPlugin.h  SimpleLifeCyclePlugin.cpp  SimpleLifeCyclePlugin.h  multiradio.cpp  multiradio.h  stop-when.cpp  wormhole-radio.cpp  wormhole-radio.h
proto/src/kernel/: Makefile.am  kernel_version.h  proto.c  proto.h  proto_vm.h
proto/src/motelink/: Makefile.am  motelink.h
proto/src/pyto/: README.txt  pyto-design-notes.txt
proto/src/pyto/lib/: bootstrap.pyto  broadcast.pyto  brownian.pyto  dilate.pyto  disperse.pyto  distance-to.pyto  distance.pyto  dither.pyto  elect.pyto  flip.pyto  grad-value.pyto  gradcast.pyto  gradient.pyto  norm.pyto  timer.pyto
proto/src/shared/: Makefile.am  Trackball.h  drawing_primitives.cpp  instructions.def  opcodes.def  palette.cpp  palette.h  plugin_manager.cpp  plugin_manager.h  proto_opcodes.h  proto_plugin.h  utils.cpp  utils.h  visualizer.cpp  visualizer.h
proto/src/sim/: Cylinder.h  DefaultsPlugin.cpp  DefaultsPlugin.h  DeviceTimer.h  Distribution.cpp  Distribution.h  DistributionsPlugin.cpp  DistributionsPlugin.h  FixedIntervalTime.cpp  FixedIntervalTime.h  FixedPoint.cpp  Grid.cpp  Grid.h  LibRegistry.cpp  LibRegistry.h  Makefile.am  Mica2Mote.cpp  Mica2Mote.h  Mica2MotePlugin.cpp  Mica2MotePlugin.h  ProtoPluginLibrary.h  RadioModelsPlugin.cpp  RadioModelsPlugin.h  SConstruct  SimpleLifeCycle.cpp  SimpleLifeCycle.h  SimpleLifeCyclePlugin.cpp  SimpleLifeCyclePlugin.h  TimeModel.h  Torus.h  UniformRandom.cpp  UniformRandom.h  XGrid.h  basic-hardware.cpp  basic-hardware.h  createRegistry.cpp  customizations.cpp  customizations.h  kernel_extension.cpp  multiradio.h  (+19 more)
proto/src/sim/dpvm-extension/: machine.hpp  neighbour.hpp
proto/src/tests/: Makefile.am  README  compiler.test  complex.test  math.test  misc.test  neocompiler.test  plugins.test  protoTestOutputFormatter.py  prototest.py  smoke.test  vectcomp.test
proto/src/tests/neo-only/: emitter.test  math.test  mathlib.test  neocompiler.test  plugins.test  tuple.test
proto/src/tests/paleo-only/: compiler.test  complex.test  emit-complex.test  math.test  mathlib.test  misc.test
proto/src/tests/universal/: smoke.test
proto/src/vm/: Makefile.am  data.hpp  delftproto.instructions  field.hpp  ieee754.hpp  kernelversion.h  machine.hpp  sharedvector.hpp  stack.hpp
proto/src/vm/instructions/: flow.cpp  math.cpp  threads.cpp
webproto/: README.txt  TODO.txt  demo.html  experiment.html  index.html  jsoncompiler.patch  protosim.js  test-index.html  test.html  tutorial.html  webcompiler  webproto.js
webproto/ace/: mode-proto.js
webproto/css/: tutorialStyle.css
webproto/js/: protosim.js  simulator_instructions.js  spatialcomputer.js  tour.js
(+41 files in other folders)
