# NOTE: order is important in this list!
SUBDIRS = \
	core \
	.

protolib_DATA = \
	broadcast.proto \
	brownian.proto \
	dilate.proto \
	disperse.proto \
	distance-to.proto \
	distance.proto \
	dither.proto \
	elect.proto \
	flip.proto \
	grad-value.proto \
	gradcast.proto \
	gradient.proto \
	norm.proto \
	timer.proto

EXTRA_DIST = $(protolib_DATA)
